--- a/index.html
+++ b/index.html
@@ -338,13 +338,19 @@ More affordable than conventional medicine, Easier to obtain than prescription m
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/team/saif.jpeg" alt="" class="img-circle img-responsive" />
             <h4>Saif Ahmed</h4>
-            <p>I would really like to solve problems such as this. I never knew that I could use my skills such as coding HTML and CSS.​
-
-I am looking forward to solve more problems like this.​</p>
+            <p>Web Developer</p>
           </div>
         </div>
       </div>
-      
+      <div class="row">
+        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+          <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
+            <img src="img/team/1.jpeg" alt="" class="img-circle img-responsive" />
+            <h4>Ahmed Abd Elmaksoud</h4>
+            <p>Data Processor</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
