--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ More affordable than conventional medicine, Easier to obtain than prescription m
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
-            <img src="img/team/1.jpeg" alt="" class="img-circle img-responsive" />
+            <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
             <h4>Ahmed Abd Elmaksoud</h4>
             <p>Data Processor</p>
           </div>
